@@ -372,6 +372,7 @@
     <toolitem action="FormatMergeCells"/>
     <toolitem action="FormatUnmergeCells"/>
     <!-- Just a selector for vertical alignment.  -->
+    <toolitem action="HAlignmentSelector"/>
     <toolitem action="VAlignmentSelector"/>
     <separator/>
     <toolitem action="FormatAsAccounting"/>
